--- a/saturn-vanity/locales/el.json
+++ b/saturn-vanity/locales/el.json
@@ -1,25 +1,33 @@
 {
-    "navbar": {
-      "quienes_somos": "Ποιοι Είμαστε",
-      "contactanos": "Επικοινωνήστε μαζί μας"
-    },
-    "hero_section": {
-      "header1": "Στο SATURN VANITY",
-      "header2": "Έχουμε πάντα τις καλύτερες προσφορές σε κινητά",
-      "button": "ΠΡΟΣΦΟΡΕΣ ΣΗΜΕΡΑ"
-    },
-    "contact_form": {
-      "name_label": "Πλήρες Όνομα*",
-      "company_label": "Εταιρεία",
-      "email_label": "Διεύθυνση Email*",
-      "message_label": "Μήνυμα*",
-      "submit_button": "Αποστολή"
-    },
-    "footer": {
-      "office": "Γραφείο",
-      "contact": "Επικοινωνία",
-      "warehouse": "Αποθήκη",
-      "social_media": "Ακολουθήστε μας στα κοινωνικά δίκτυα:"
-    }
+  "navbar": {
+    "quienes_somos": "Ποιοι Είμαστε",
+    "contactanos": "Επικοινωνήστε μαζί μας"
+  },
+  "hero_section": {
+    "header1": "Στο SATURN VANITY",
+    "header2": "Έχουμε πάντα τις καλύτερες προσφορές σε κινητά",
+    "subheader": "Κατεβάστε τις προσφορές της ημέρας κάνοντας κλικ εδώ!",
+    "button": "ΠΡΟΣΦΟΡΕΣ ΣΗΜΕΡΑ"
+  },
+  "brands_section": {
+    "title": "ΜΑΡΚΕΣ"
+  },
+  "about_us": {
+    "title": "ΠΟΙΟΙ ΕΙΜΑΣΤΕ",
+    "description": "Στην Saturn Vanity, είμαστε μια ομάδα επαγγελματιών με πάνω από 20 χρόνια εμπειρίας στην τεχνολογική αγορά. Ειδικευόμαστε στην B2B αγορά και πώληση κινητών τηλεφώνων, τόσο νέων όσο και ανακαινισμένων, από γνωστές μάρκες όπως η Apple. Η δέσμευσή μας είναι να προσφέρουμε συσκευές υψηλής ποιότητας, διατηρώντας πάντα εμπορικές σχέσεις βασισμένες στην εμπιστοσύνη και την αποτελεσματικότητα."
+  },
+ "contact_form": {
+    "contactanos": "ΕΠΙΚΟΙΝΩΝΗΣΤΕ ΜΑΖΙ ΜΑΣ",
+    "name_label": "Πλήρες Όνομα*",
+    "company_label": "Εταιρεία",
+    "email_label": "Διεύθυνση Email*",
+    "message_label": "Μήνυμα*",
+    "submit_button": "Αποστολή"
+  },
+  "footer": {
+    "office": "Γραφείο",
+    "contact": "Επικοινωνία",
+    "warehouse": "Αποθήκη",
+    "social_media": "Ακολουθήστε μας στα κοινωνικά δίκτυα:"
   }
-  
+}
