--- a/saturn-vanity/locales/es.json
+++ b/saturn-vanity/locales/es.json
@@ -6,7 +6,7 @@
   "hero_section": {
     "header1": "En SATURN VANITY",
     "header2": "Tenemos siempre los mejores precios en móviles",
-    "subheader": "Descargate las ofertas del día haciendo click acá!",
+    "subheader": "Descargate las ofertas del día haciendo click aquí!",
     "button": "OFERTAS DE HOY"
   },
   "brands_section": {
